# sarab

./: .gitignore  README.md  pyproject.toml
sarab/: __init__.py  __main__.py  benchmark.py  cli.py  compare.py  config.py  generate.py  hub.py
sarab/engine/: __init__.py  architectures.py  kvcache.py  layers.py  model.py  runtime.py
sarab/loader/: __init__.py  mmap_store.py  streamer.py
sarab/quant/: __init__.py  int4.py
sarab/server/: __init__.py  api.py
tests/: _synthetic.py  conftest.py  test_architectures.py  test_end_to_end.py  test_engine.py  test_fidelity.py  test_kvcache_sampling.py  test_layers.py  test_mmap_store.py  test_quant.py  test_streamer.py
